Fix Home Footer Signature not centered on Firefox

--- a/src/stylesheets/components/Footer/Footer.module.sass
+++ b/src/stylesheets/components/Footer/Footer.module.sass
@@ -72,6 +72,7 @@
 .signature
   margin-top: 15px
   margin-bottom: 10px
+  width: 100%
   +screen(small)
     margin-top: 10px
 
